# NASequencer

./: .gitignore  ASTNode.h  ASTParser.c  ASTParser.h  CMakeLists.txt  ConsoleWriter.c  ConsoleWriter.h  DSLParser.c  DSLParser.h  Expression.c  Expression.h  FSWatcher.c  FSWatcher.h  LICENSE  Lexer.c  Lexer.h  Lexer.l  Makefile  MessageQueue.c  MidiClient.h  NAMidi.c  NAMidi.h  ParseContext.c  ParseContext.h  ParseError.h  Parser.c  Parser.h  Parser.y  Player.c  Player.h  Sequence.c  Sequence.h  console_writer.cpp  console_writer.h  example.namidi  fswatcher.cpp  fswatcher.h  main.c  main.cpp  namidi.cpp  (+9 more)
application/: CMakeLists.txt  MidiEvent.h  MidiEvent.m  MidiSourceManager.h  MidiSourceManager.m  Mixer.h  Mixer.m  NAMidi.h  NAMidi.m  Player.h  Player.m  Sequence.h  Sequence.m  SequenceBuilder.m
application/namidi-application.xcodeproj/: project.pbxproj
cli/: .gitignore  CLI.c  CLI.h  CMakeLists.txt  Command.c  Command.h  EventListView.c  EventListView.h  InformationView.c  InformationView.h  NAMidi.c  NAMidi.h  PianoRollView.c  PianoRollView.h  View.h  license.txt  main.c  main.m  syntax.nas  syntax.txt
cocoa/openssl/: CMakeLists.txt  build.sh  verify_receipt.c
core/: ASTParser.c  BuildInformation.c  BuildInformation.h  CMakeLists.txt  ConsoleWriter.c  ConsoleWriter.h  CoreMidiClient.c  DSLParser.c  Expression.c  Expression.h  FSWatcher.c  Lexer.l  Macro.h  MessageQueue.c  MessageQueue.h  MidiClient.c  MidiClient.h  MidiSourceManager.c  MidiSourceManager.h  Mixer.c  Mixer.h  NAMidi.c  NAMidi.h  NAMidiParser.c  NAMidiParser.h  NAMidiSequenceBuilder.c  NAMidiSequenceBuilder.h  NoteTable.h  ParseContext.c  ParseContext.h  ParseError.c  ParseError.h  Parser.y  ParserProxy.c  ParserProxy.h  Player.c  Player.h  PlayerClockSource.c  SMFWriter.h  Sequence.c  (+6 more)
core/namidi-core.xcodeproj/: project.pbxproj
core/osx/: FSWatcher.c
export/: AACWriter.h  CMakeLists.txt  Exporter.c  Exporter.h  SMFWriter.c  SMFWriter.h  WaveWriter.c  WaveWriter.h
export/osx/: AACWriter.c
parser/: .gitignore  ABCExpression.c  ABCParser.c  ABCParser.h  ABC_lex.l  ABC_yacc.y  CMakeLists.txt  DSLParser.h  Expression.c  Expression.h  NAMidiExpression.c  NAMidiExpression.h  NAMidiLexer.l  NAMidiParser.c  NAMidiParser.h  NAMidiParser.y  NAMidi_lex.l  NAMidi_yacc.y  Node.h  NoteTable.c  NoteTable.h  ParseContext.c  ParseContext.h  ParseErrorCode.h  ParseInfo.c  ParseInfo.h  Parser.c  Parser.h  ParserProxy.c  ParserProxy.h  SequenceBuilder.c  SequenceBuilder.h
parser/abc/: ABCAST.c  ABCAST.h  ABCASTAnalyzer.c  ABCASTAnalyzer.h  ABCASTDumper.c  ABCASTDumper.h  ABCDriver.c  ABCDriver.h  ABCExpression.c  ABCExpression.h  ABCParser.c  ABCParser.h  ABCPreprocessor.c  ABCPreprocessor.h  ABCSEM.c  ABCSEM.h  ABCSEMAnalyzer.c  ABCSEMAnalyzer.h  ABCSEMDumper.c  ABCSEMDumper.h  ABC_directive_lex.l  ABC_directive_yacc.y  ABC_information_lex.l  ABC_information_yacc.y  ABC_lex.l  ABC_tune_body_lex.l  ABC_tune_body_yacc.y  ABC_yacc.y  CMakeLists.txt
parser/mml/: CMakeLists.txt  MMLAST.c  MMLAST.h  MMLASTAnalyzer.c  MMLASTAnalyzer.h  MMLASTDumper.c  MMLASTDumper.h  MMLDriver.c  MMLDriver.h  MMLParser.c  MMLParser.h  MMLPreprocessor.c  MMLPreprocessor.h  MMLSEM.c  MMLSEM.h  MMLSEMAnalyzer.c  MMLSEMAnalyzer.h  MMLSEMDumper.c  MMLSEMDumper.h  MML_lex.l  MML_preprocessor_lex.l  MML_yacc.y
parser/namidi/: CMakeLists.txt  NAMidiAST.c  NAMidiAST.h  NAMidiASTAnalyzer.c  NAMidiASTAnalyzer.h  NAMidiASTDumper.c  NAMidiASTDumper.h  NAMidiDriver.c  NAMidiDriver.h  NAMidiExpression.c  NAMidiExpression.h  NAMidiParser.c  NAMidiParser.h  NAMidiPreprocessor.c  NAMidiPreprocessor.h  NAMidiSEM.c  NAMidiSEM.h  NAMidiSEMAnalyzer.c  NAMidiSEMDumper.c  NAMidiSEMDumper.h  NAMidi_lex.l  NAMidi_preprocessor_lex.l  NAMidi_yacc.y
parser/rewite/: Analyzer.h  CMakeLists.txt  DSLParser.h  Driver.h  FileLocation.h  Node.c  Node.h  NoteTable.h  ParseContext.c  ParseContext.h  ParseInfo.c  ParseInfo.h  ParseResult.h  Parser.c  Parser.h  SequenceBuilder.h  main.c
parser/test/: CMakeLists.txt  NAMidiParserTest.c
research/: ADSREnvelope.h  AudioOut.c  AudioOut.h  CMakeLists.txt  Channel.c  Channel.h  Chorus.c  Define.h  Envelope.c  Envelope.h  IIRFilter.c  IIRFilter.h  LFO.h  MidiSource.h  Modulator.c  Modulator.h  Preset.c  Preset.h  Reverb.c  Reverb.h  SoundFont.c  SoundFont.h  Synthesizer.c  Synthesizer.h  Voice.c  Voice.h  main.c
research/AU/: AudioTest.c
scratch/: .gitignore  CMakeLists.txt  Expression.c  Expression.h  ExpressionType.h  Lexer.l  MidiEvent.h  NAMidi.m  NAMidiInterpreter.h  NAMidiLexer.l  NAMidiParser.c  NAMidiParser.h  NAMidiParser.y  NoteTable.c  NoteTable.h  ParseError.h  Parser.c  Parser.h  Parser.y  ParserCallback.h  Player.h  Player.m  Sequence.h  Sequence.m  YYContext.h  bass.namidi  drums.namidi  example.namidi  include.namidi  main.c  syntax.namidi
scratch/20150825/: CMakeLists.txt  Lexer.l  NoteTable.h  Parser.y
scratch/application/: CMakeLists.txt  MidiEvent.h  MidiEvent.m  Mixer.h  Mixer.m  NAMidi.h  NAMidi.m  Player.h  Player.m  Sequence.h  Sequence.m  SequenceBuilder.h  SequenceBuilder.m
scratch/cli/: CMakeLists.txt  Controller.h  Controller.m  View.m  main.m
scratch/common/: CMakeLists.txt  TimeTable.c  TimeTable.h
scratch/core/: CMakeLists.txt  CoreMidiClient.c  CoreMidiClient.h  Expression.c  Expression.h  ExpressionType.h  FSWatcher.c  FSWatcher.h  Lexer.l  MessageQueue.c  MidiClient.h  NAMidiParser.c  NAMidiParser.h  (+9 more)
synthesizer/: AudioOut.c  AudioOut.h  AudioSample.c  AudioSample.h  CMakeLists.txt  Channel.c  Chorus.c  Chorus.h  Define.h  Envelope.c  Envelope.h  Filter.c  Filter.h  LFO.c  LFO.h  MidiSource.h  Modulator.c  Modulator.h  Preset.c  Reverb.c  Reverb.h  SoundFont.c  SoundFont.h  Synthesizer.c  Synthesizer.h  Voice.c  Voice.h
test/: ABCPreprocessorTest.c  CMakeLists.txt  LibTest.c  ParseResultPrinter.c  ParserTest.c  case.namidi  drums.namidi  example.namidi  example_2.namidi  foward_backward.namidi  local_time.namidi  midi.trak  note_block.namidi  note_list.namidi  octave.namidi  offset_length.namidi  patten_expanding.namidi  pattern_list.namidi  piano.namidi  quantize.namidi
(+775 files in other folders)
